--- a/package.json
+++ b/package.json
@@ -16,18 +16,32 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "docx": "^8.5.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.10",
+    "fs": "0.0.1-security",
     "geist": "^1.3.0",
+    "latex.js": "^0.12.6",
+    "libreoffice-convert": "^1.5.1",
     "lucide-react": "^0.378.0",
+    "mammoth": "^1.7.2",
     "next": "14.2.3",
-    "react": "^18",
+    "office-script": "^1.7.0",
+    "path": "^0.12.7",
+    "pdfjs-dist": "^4.3.136",
+    "puppeteer": "^22.10.0",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.5",
+    "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
