--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "nextjs-starter-template",
+  "name": "tracta",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "eslistConfig": {
+    "extends": [
+      "next",
+      "next/core-web-vitals"
+    ]
+  },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.4.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -16,12 +24,15 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@tanstack/react-query": "^5.40.1",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "copy-webpack-plugin": "^12.0.2",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.2.10",
@@ -32,6 +43,8 @@
     "lucide-react": "^0.378.0",
     "mammoth": "^1.7.2",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "next-transpile-modules": "^10.0.1",
     "office-script": "^1.7.0",
     "path": "^0.12.7",
     "pdfjs-dist": "^4.3.136",
@@ -42,15 +55,23 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.19",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.3",
+    "webpack": "^5.91.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/preset-env": "^7.24.7",
     "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
