--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.19",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.3",
+    "uuid": "^9.0.1",
     "webpack": "^5.91.0",
     "zod": "^3.23.8"
   },
@@ -70,6 +72,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "eslint": "^8",
