--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-types": "npx supabase gen types typescript --project-id qipridxmibgoaraznkba --schema public > src/utils/supabase/types/supabase.ts"
   },
   "eslistConfig": {
     "extends": [
