--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     ]
   },
   "dependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.4.2",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -29,6 +31,13 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^5.40.1",
+    "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-code-block-lowlight": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,8 +47,10 @@
     "framer-motion": "^11.2.10",
     "fs": "0.0.1-security",
     "geist": "^1.3.0",
+    "highlight.js": "^11.9.0",
     "latex.js": "^0.12.6",
     "libreoffice-convert": "^1.5.1",
+    "lowlight": "^3.1.0",
     "lucide-react": "^0.378.0",
     "mammoth": "^1.7.2",
     "next": "14.2.3",
@@ -56,6 +67,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.19",
+    "sass": "^1.77.5",
+    "scss": "^0.2.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -68,6 +81,7 @@
     "@babel/core": "^7.24.7",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@faker-js/faker": "^8.4.1",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -82,6 +96,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
