--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.24.7",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.4.2",
+    "@monaco-editor/loader": "^1.4.0",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
