--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "lowlight": "^3.1.0",
     "lucide-react": "^0.378.0",
     "mammoth": "^1.7.2",
+    "monaco-editor": "^0.49.0",
+    "monaco-types": "^0.1.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "next-transpile-modules": "^10.0.1",
