--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.4.2",
     "@monaco-editor/loader": "^1.4.0",
     "@monaco-editor/react": "^4.6.0",
+    "@next/font": "^14.2.5",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,6 +29,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-pdf-viewer/core": "3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
@@ -49,6 +52,7 @@
     "fs": "0.0.1-security",
     "geist": "^1.3.0",
     "highlight.js": "^11.9.0",
+    "install": "^0.13.0",
     "latex.js": "^0.12.6",
     "libreoffice-convert": "^1.5.1",
     "lowlight": "^3.1.0",
@@ -59,9 +63,10 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "next-transpile-modules": "^10.0.1",
+    "npm": "^10.8.2",
     "office-script": "^1.7.0",
     "path": "^0.12.7",
-    "pdfjs-dist": "^4.3.136",
+    "pdfjs-dist": "^3.4.120",
     "puppeteer": "^22.10.0",
     "react": "^18.3.1",
     "react-dom": "^18",
@@ -70,6 +75,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.19",
+    "react-to-pdf": "^1.0.1",
     "sass": "^1.77.5",
     "scss": "^0.2.4",
     "sonner": "^1.4.41",
