--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.24.7",
+    "@fileforge/client": "^0.1.17",
     "@fileforge/react-print": "^0.1.143",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.4.2",
@@ -68,6 +69,7 @@
     "lowlight": "^3.1.0",
     "lucide-react": "^0.378.0",
     "mammoth": "^1.7.2",
+    "mini-svg-data-uri": "^1.4.4",
     "monaco-editor": "^0.49.0",
     "monaco-types": "^0.1.0",
     "next": "14.2.3",
