--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@tiptap/extension-document": "^2.4.0",
     "@tiptap/extension-paragraph": "^2.4.0",
     "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/pm": "^2.5.9",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "buffer": "^6.0.3",
